[package]
name = "xmutate"
version = "0.1.0"
edition = "2024"
description = "CLI + library for mutating structured data like JSON"
license = "MIT"
repository = "https://github.com/yourusername/xmutate"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"


[lib]
name = "xmutate"
path = "src/lib.rs"

[[bin]]
name = "xmutate"
path = "src/main.rs"
